...
        android:layout_marginBottom="64dp"
        android:fontFamily="@font/lato"
        android:text="@string/login_greeting"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="wrap_content"
...
        android:fontFamily="@font/lato"
        android:foregroundTint="@color/Lighter_Gray_Text"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="10dp"
        android:textColor="@color/Lighter_Gray_Text"
        app:layout_constraintBottom_toTopOf="@+id/passwordInput"
        app:layout_constraintStart_toStartOf="@+id/passwordInput" />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
...
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_button_not_clicked"
        android:fontFamily="@font/lato_bold"
        android:text="Login"
        app:layout_constraintEnd_toEndOf="@+id/passwordInput"
        app:layout_constraintTop_toTopOf="@+id/signup_button" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@drawable/rounded_corners_button_not_clicked"
        android:fontFamily="@font/lato_bold"
        android:text="Signup"
        app:layout_constraintStart_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@+id/rememberUser" />

    <TextView
        android:id="@+id/display_name_prompt"
        android:layout_width="253dp"
...
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@+id/loginPrompt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/signupContinueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/Dark_Gray_Background"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
        app:tint="@color/Lighter_Gray_Text" />

    <EditText
        android:id="@+id/displayNameInput"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@drawable/rounded_box"
        android:backgroundTint="@color/Medium_Gray_Background"
        android:ems="10"
        android:fontFamily="@font/lato"
...
