...
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email_tutorial3">Please enter your email:</string>
    <string name="password_tutorial3">Please enter your password:</string>
    <string name="title_activity_tutorial3enterhabit">tutorial_3enterhabit</string>
    <string name="title_activity_tutorial4freq">tutorial_4freq</string>
    <string name="following_list_title">Following</string>
    <string name="today_button_text">Today</string>
    <string name="all_button_text">All</string>
    <string name="TEMP_habit_list_greeting">Hey, Username</string>
    <string name="requests_heading">Friends</string>
    <string name="feed_heading">Feed</string>

    <!--  Logging tags for database operations  -->
    <string name="db_add_success">DB ADD SUCCESS</string>
...
