...
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/homeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/habit_list_all_button">

        <ListView
            android:id="@+id/all_habits_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
...
        android:textColor="@color/Lighter_Gray_Text"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintStart_toStartOf="@+id/frameLayout"
        app:layout_constraintTop_toBottomOf="@+id/greeting" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/habit_list_today_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/rounded_corners_button_not_clicked"
        android:fontFamily="@font/lato_bold"
        android:text="@string/today_button_text"
...
