...
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/noPhotoFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/addHabitEventButton"
        android:layout_width="49dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/Medium_Gray_Background"
        android:src="@drawable/ic_done"
...
